v3.5.1:
  - New protocol to import tilt-series CTF from different plugins
v3.5.0:
 Users:
  - Prevent viewers from locking the screen focus.
  - Improve SetOfCoordinates3D str method.
  - Fit vesicles prot nos requesting the tomograms. Refactored.
  - Fix accum dose in TS import without mdoc.
  - Napari 0.4.17 is the default version. boxmanager and tomotwin are now independent
 Developers:
  - Expand the method checkTomograms from the Test Centralization Layer.
  - Import tomograms: the acquisition is now copied to both the set and the items.
  - Some refactor in protocol_ts_estimate_ctf.py required for the new CTF code design prots approach.
  - TiltSeries object: expand the method to generate the imod tlt file allowing to consider the excluded views.
v3.4.2:
  - TS movies not hiding any acquisition parameter to prevent accidental override.
v3.4.1:
  - Update HIV-tiltseries-alignment-reconstruction.json template
  - Update Picking template II
  - Update Relion4 template
v3.4:
  - Compose tilt series: Allowing tilt series with gaps
  - New protocol: "meshes from tomoMask"
  - Tomoviewer: Can sort by acquisition order too.
  - Sampling rate in Coordinates3D rounded to 2 decimal places upon visualization.
  - HIV STA template divided into 2: Dynamo STA and Relion4 STA
  - Picking template tutorial (cryolo, eman, deepfinder) changed
  Developers:
  - TestBaseCentralizedLayer: New test class to make more precise assertions on outputs.
  - Adding a method for extracting odd-even filenames
  - Fix schedule execution in protocol for importing coords from Scipion
v3.3:
  - Tomo metadata viewer increase contrast when left clicking on the preview image.
  - Import tilt series movies using a pattern instead of from mdoc files was improved and admits brackets [] in the
    basename of the files.
  - Import tilt series from mdoc now admits numeric base names or base names beginning by a numeric character