@@ -34,6 +34,12 @@ from tomo.objects import SetOfSubTomograms, SetOfCoordinates3D, Coordinate3D, To
 class TestBaseCentralizedLayer(BaseTest):
 
     def checkSetGeneralProps(self, inSet, expectedSetSize=-1, expectedSRate=-1, streamState=2):
+        """
+        :param inSet: A set of Scipion Tomo objects.
+        :param expectedSetSize: expected set site to check.
+        :param expectedSRate: expected sampling rate, in Å/pix, to check.
+        :param streamState: expected stream state, being 2 (default) a stream that is closed.
+        """
         self.assertSetSize(inSet, expectedSetSize)
         self.assertAlmostEqual(inSet.getSamplingRate(), expectedSRate, delta=0.001)
         self.assertEqual(inSet.getStreamState(), streamState)
@@ -47,7 +53,9 @@ class TestBaseCentralizedLayer(BaseTest):
         :param inTsSet: SetOfTiltSeries.
         :param expectedSetSize: expected set site to check.
         :param expectedSRate: expected sampling rate, in Å/pix, to check.
-        :param expectedDimensions: list containing the expected X,Y, in pixels, and no. images, to check.
+        :param expectedDimensions: list containing the expected X,Y, in pixels, and no. images, to check. A dict of
+        structure {key --> tsId: value: expectedDimensions} is also admitted in the case of heterogeneous sets, e.g.
+        TS with different number of tilt images.
         :param testAcqObj: TomoAcquisition object generated to test the acquisition associated to the inTsSet.
         :param alignment: Alignment type expected (see scipion-em > pwem > constants.py).
         :param isPhaseFlipped: False by default. Used to check if the tilt series were phase flipped.
@@ -64,33 +72,32 @@ class TestBaseCentralizedLayer(BaseTest):
         # TODO: check if attribute hasCtfCorrected makes sense here or if it's inherited from SPA and then does not.
         # Check the set attributes
         self.checkSetGeneralProps(inTsSet, expectedSetSize=expectedSetSize, expectedSRate=expectedSRate)
-        # Check the dimensions
-        if expectedDimensions:
-            x, y, z = inTsSet.getDimensions()
-            self.assertEqual([x, y, z], expectedDimensions)
         if testAcqObj:
             self.checkTomoAcquisition(testAcqObj, inTsSet.getAcquisition())
         if alignment:
             self.assertTrue(inTsSet.getAlignment(), alignment)
         self.assertEqual(inTsSet.isPhaseFlipped(), isPhaseFlipped)
         self.assertEqual(inTsSet.isAmplitudeCorrected(), isAmplitudeCorrected)
-        self.assertEqual(inTsSet.hasAlignment(), hasAlignment)
+        # self.assertEqual(inTsSet.hasAlignment(), hasAlignment)
         self.assertEqual(inTsSet.hasOddEven(), hasOddEven)
         if anglesCount:
             self.assertEqual(inTsSet.getAnglesCount(), anglesCount)
         self.assertEqual(inTsSet.ctfCorrected(), hasCtfCorrected)
         self.assertEqual(inTsSet.interpolated(), isInterpolated)
         # Check the main properties of the set items
-        for ts in inTsSet:
-            # Sampling rate
-            self.assertAlmostEqual(ts.getSamplingRate(), expectedSRate, delta=0.001)
+        for i, ts in enumerate(inTsSet):
             # Check the dimensions
             if expectedDimensions:
                 x, y, z = ts.getDimensions()
-                self.assertEqual([x, y, z], expectedDimensions)
+                if type(expectedDimensions) is dict:
+                    self.assertEqual([x, y, z], expectedDimensions[ts.getTsId()])
+                else:
+                    self.assertEqual([x, y, z], expectedDimensions)
+            # Sampling rate
+            self.assertAlmostEqual(ts.getSamplingRate(), expectedSRate, delta=0.001)
             for ti in ts:
                 # Alignment matrix
-                self.checkTransformMatrix(ti.getTransform().getMatrix(), alignment=hasAlignment)
+                self.checkTransformMatrix(ti.getTransform().getMatrix(), alignment=hasAlignment, is2d=True)
                 # Filename
                 self.assertTrue(exists(ti.getFileName()))
                 # Sampling rate
@@ -162,6 +169,7 @@ class TestBaseCentralizedLayer(BaseTest):
             if expectedDimensions:
                 x, y, z = tomo.getDimensions()
                 self.assertEqual([x, y, z], expectedDimensions, msg=checkSizeMsg)
+
             # Check the origin
             if expectedOriginShifts:
                 x, y, z = tomo.getOrigin().getShifts()
@@ -410,7 +418,7 @@ class TestBaseCentralizedLayer(BaseTest):
         if expectedBoxSize:
             self.assertEqual(inSet.getBoxSize(), expectedBoxSize)
 
-    def checkTransformMatrix(self, outMatrix, alignment=False, is2d=False):
+    def checkTransformMatrix(self, outMatrix, alignment=False, is2d=False, isInterpolated=False, isExcludedView=False):
         """Checks the shape and coarsely the contents of the transformation matrix provided.
 
         :param outMatrix: transformation matrix of a subtomogram or coordinate.
@@ -418,19 +426,24 @@ class TestBaseCentralizedLayer(BaseTest):
         eye matrix (False) or not (True).
         :param is2d: False by default. Used to indicate if the expected transformation matrix should be of size 3 x 3
         (True) or 4 x 4 (False).
+        :param isInterpolated: if True, the expected transformation matrix is the Identity
+        :param isExcludedView: it behaves the same as param isInterpolated
         """
         size = 3 if is2d else 4
         transfMatrixShape = (size, size)
         identityMatrix = np.eye(size)
         self.assertIsNotNone(outMatrix)
-        if type(outMatrix) != np.ndarray:
+        if type(outMatrix) is not np.ndarray:
             outMatrix = np.array(outMatrix)
         self.assertIsNotNone(outMatrix)
-        self.assertTrue(outMatrix.shape, transfMatrixShape)
-        if alignment:
-            self.assertFalse(np.array_equal(outMatrix, identityMatrix))
-        else:
+        self.assertEqual(outMatrix.shape, transfMatrixShape)
+        if isInterpolated or isExcludedView:
             self.assertTrue(np.array_equal(outMatrix, identityMatrix))
+        else:
+            if alignment:
+                self.assertFalse(np.array_equal(outMatrix, identityMatrix))
+            else:
+                self.assertTrue(np.array_equal(outMatrix, identityMatrix))
 
     def checkShiftsScaling(self, inTransform, outTransform, scaleFactor):
         """Check if the shifts were scaled properly in the case of subtomogram extraction from a different
