@@ -1,5 +1,9 @@
 v3.5.1:
+ Users:
   - New protocol to import tilt-series CTF from different plugins
+ Developers:
+  - Improve the Test Centralization layer.
+  - Centralize method SetWrongDefocus
 v3.5.0:
  Users:
   - Prevent viewers from locking the screen focus.
